--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,31 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </button>
 </div>
+<h1>Categorias:</h1>
+@{
+    foreach (string item in ViewBag.ListaCategorias)
+    {
+        <a href="#" class="btn btn-light">@item</a>
+    }
+}
