me quiero morir

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="position:absolute;">
         <div class="container">
             <div class="container pt-4">
                 <section class="mb-4" style="position:absolute; right:2%;">
