--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,33 +1,43 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+﻿<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100">
+      <img src="/img/carrusel1.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100">
+      <img src="/img/carrusel2.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100">
+      <img src="/img/carrusel3.jpg" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="/img/carrusel4.jpg" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="/img/carrusel5.jpg" class="d-block w-100">
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+    <span class="visually-hidden">Next</span>
   </button>
 </div>
 <h1>Categorias:</h1>
 @{
-    foreach (string item in ViewBag.ListaCategorias)
-    {
-        string foto = "/img/" + item + ".jpg";
-        <a href="#" class="btn btn-light"><img src=@foto width="200px"><br>@item</a>
-    }
+  foreach (Categoria item in ViewBag.ListaCategorias)
+  {
+    string foto = "/img/" + item.categoria + ".jpg";
+    <a href='@Url.Action("Categoria","Home", new {id_categoria = item.id})' class="btn btn-light m-3"><img src="@foto"
+      width="200px" height="250px"><br>@item.categoria</a>
+  }
 }
