No quiero hacer mas views

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                                                 <div class="form-group">
                                                     <p class="small" style="transform: rotate(0);">Don't have an
                                                         account?
-                                                        <a href="#" class="stretched-link">Register</a>
+                                                        <a href='@Url.Action("Registrarse","Home")' class="stretched-link">Register</a>
                                                     </p>
                                                     <label for="exampleInputEmail1">Email</label>
                                                     <input type="email" class="form-control" id="exampleInputEmail1"
@@ -97,13 +97,13 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container" style="margin-bottom:120px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="position:absolute;">
+    <footer class="border-top footer text-muted " >
         <div class="container">
             <div class="container pt-4">
                 <section class="mb-4" style="position:absolute; right:2%;">
