--- a/Views/Home/Registrarse.cshtml
+++ b/Views/Home/Registrarse.cshtml
@@ -15,67 +15,41 @@
         <p></p>
         <div class="form-row">
             <div class="form-group col">
-                <label for="fechaNac">Fecha de Nacimiento</label>
-                <input type="date" class="form-control" id="fechaNac">
-            </div>
-            <div class="form-group col">
                 <label for="exampleInputEmail1">Email</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                     else.</small>
             </div>
-        </div>
-        <div class="form-row">
             <div class="form-group col">
                 <label for="exampleInputPassword1">Contraseña</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
-            <div class="form-group col">
-                <label for="exampleInputPassword2">Confirmar contraseña</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
         </div>
         <div class="form-row">
-            <div class="col">
-                <label for="numTel">Num. de Telefono</label>
-                <input type="text" class="form-control" id="numTel">
+            <div class="form-group col">
+                <label for="fecha_nacimiento">Fecha de Nacimiento</label>
+                <input type="date" class="form-control" id="fecha_nacimiento">
+            </div>
+            <div class="form-group col">
+                <label for="direccion">Direccion</label>
+                <input type="text" class="form-control" id="direccion">
             </div>
         </div>
         <p></p>
         <div class="form-row">
-            <div class="col">
-                <label for="loc">Localidad</label>
-                <select class="form-control" id="loc">
+            <div class="form-group col">
+                <label for="provincia">Localidad/Provincia</label>
+                <select class="form-control" id="provincia">
                     <option selected></option>
-                    <option>Buenos Aires</option>
-                    <option>CABA</option>
-                    <option>Entre Rios</option>
-                    <option>Cordoba</option>
-                    <option>San Luis</option>
-                    <option>San Juan</option>
-                    <option>Santiago del Estero</option>
-                    <option>Mendoza</option>
-                    <option>Tierra del Fuego</option>
-                    <option>Santa Cruz</option>
-                    <option>Neuquen</option>
-                    <option>Jujuy</option>
-                    <option>Misiones</option>
-                    <option>Rio Negro</option>
-                    <option>Tucuman</option>
-                    <option>Salta</option>
-                    <option>La Pampa</option>
-                    <option>Chaco</option>
-                    <option>Santa Fe</option>
-                    <option>Corrientes</option>
-                    <option>Chubut</option>
-                    <option>Formosa</option>
-                    <option>La Rioja</option>
-                    <option>Catamarca</option>
+                    @foreach (string item in ViewBag.ListaProvincias)
+                    {
+                        <option>@item</option>
+                    }
                 </select>
             </div>
-            <div class="col">
-                <label for="dir">Direccion</label>
-                <input type="text" class="form-control" id="dir">
+            <div class="form-group col">
+                <label for="num_telefono">Num. de Telefono</label>
+                <input type="text" class="form-control" id="num_telefono">
             </div>
         </div>
     </form>
