No quiero programar mas

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,8 +45,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="btn nav-link text-dark" asp-area="" asp-controller="Home"
-                                asp-action="Privacy">About
+                            <a class="btn nav-link text-dark" href='@Url.Action("AboutUs","Home")'>About
                                 Us</a>
                         </li>
                     </ul>
