--- a/Views/Home/Categoria.cshtml
+++ b/Views/Home/Categoria.cshtml
@@ -10,8 +10,32 @@
                 <div class="card-body">
                     <h5 class="card-title">@item.nombre</h5>
                     <h6 class="text-success">$@item.precio</h6>
-                    <a class="btn btn-secondary" href='@Url.Action("InfoProducto","Home", new { id_producto = item.id })' class="btn btn-primary">Ver
-                        mas</a>
+                    <button class="btn btn-secondary" onclick="VerInfoProducto(@item.id)" class="btn btn-primary"
+                    data-toggle="modal" data-target="#modalProducto">Ver
+                        mas</button>
+                    <div class="modal fade" id="modalProducto" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="titulo">
+                                    </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="font-italic text-center" id="texto"></p>
+                                    <div class="text-center">
+                                        <img class="w-25" id="imagen" src="">
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href='@Url.Action("Index","Home")' class="btn btn-primary">Seguir comprando</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <a class="btn btn-primary" href='@Url.Action("Comprar","Home", new { id_producto = item.id })'>Comprar</a>
                 </div>
             </div>
