--- a/Views/Home/CategoriaVacia.cshtml
+++ b/Views/Home/CategoriaVacia.cshtml
@@ -5,3 +5,33 @@
     <img src="/img/cross.png"><br>
     <p>Esta categoria aun esta vacia</p>
 </div>
+
+<button class="btn btn-light" style="position:absolute; right:20px; top:70%" onclick="AgregarProducto()" data-toggle="modal"
+    data-target="#modal"><img src="/img/nuevo.png" width="50px"></button>
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="titulo">
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="text-center">
+                    <img class="w-75" id="imagen" src=""><br>
+                </div>
+                <div id="texto"></div><br>
+                <div class="text-center">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">
+                    Seguir comprando
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
