--- a/Views/Home/Categoria.cshtml
+++ b/Views/Home/Categoria.cshtml
@@ -1,11 +1,77 @@
-<h1>@ViewBag.Categoria</h1><br>
-<p></p>
+<h1>@ViewBag.Categoria.categoria</h1>
 
 @{
+    string hidden = "";
+    if (!ViewBag.Usuario.administrador) hidden = "hidden";
+    <button class="btn btn-light mb-5" @hidden data-toggle="modal" data-target="#modalForm"><img class="mr-3"
+            src="/img/nuevo.png" width="25px">Agregar producto</button>
+    <div class="modal fade" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="titulo">Agregar Producto
+                    </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" action='@Url.Action("AgregarProducto","Home")' enctype="multipart/form-data">
+                        <div class="form-row">
+                            <div class="col">
+                                <label><strong>Nombre</strong></label>
+                                <input class="form-control" required type="text" name="nombre" />
+                            </div>
+                            <div class="col">
+                                <label><strong>Articulo</strong></label>
+                                <input class="form-control" required type="text" name="articulo" />
+                            </div>
+                        </div><br>
+                        <div class="form-row">
+                            <div class="col">
+                                <label><strong>Descripcion</strong></label>
+                                <textarea class="form-control" required name="descripcion"></textarea>
+                            </div>
+                            <input type="hidden" name="id_categoria" value="@ViewBag.Categoria.id">
+                        </div><br>
+                        <div class="form-row">
+                            <div class="col">
+                                <label><strong>Imagen</strong></label><br>
+                                <input required type="file" name="imagen" />
+                            </div>
+                        </div><br>
+                        <div class="form-row">
+                            <div class="col">
+                                <label><strong>Precio</strong></label>
+                                <input class="form-control" required type="number" name="precio" />
+                            </div>
+                            <div class="col">
+                                <label><strong>Color</strong></label>
+                                <input class="form-control" required type="text" name="color" />
+                            </div>
+                            <div class="col">
+                                <label><strong>Talle</strong></label>
+                                <input class="form-control" required type="text" name="talle" />
+                            </div>
+                        </div>
+                        <p></p>
+                        <input class="btn btn-primary" type="submit" value="Guardar" />
+                        <input class="btn btn-light" type="reset" value="Borrar los datos ingresados" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">
+                        Seguir comprando
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     foreach (Producto item in ViewBag.ListaProductos)
     {
         <div class="ml-5 col-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-5" style="width: 18rem;">
                 <img src="@item.imagen" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">@item.nombre</h5>
@@ -13,13 +79,12 @@
                     <button class="btn btn-secondary" onclick="VerInfoProducto(@item.id)" class="btn btn-primary"
                     data-toggle="modal" data-target="#modal">Ver
                         mas</button>
-                    <div class="modal fade" id="modal" tabindex="-1" role="dialog"
-                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+                    aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="titulo">
-                                    </h5>
+                                    <h5 class="modal-title" id="titulo"></h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -29,6 +94,8 @@
                                         <img class="w-75" id="imagen" src=""><br>
                                     </div>
                                     <div id="texto"></div>
+                                    <a href='@Url.Action("Comprar","Home", new { id_producto = item.id })' class="btn btn-primary">Comprar</a>
+                                    <a @hidden href='@Url.Action("EliminarProducto","Home", new { id_producto = item.id, id_categoria = ViewBag.Categoria.id })' class="btn btn-danger">Eliminar</a>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">
@@ -43,5 +110,4 @@
             </div>
         </div>
     }
-    <button class="btn btn-light" style="position:absolute; right:20px;" onclick="AgregarProducto()" data-toggle="modal" data-target="#modal"><img src="/img/nuevo.png" width="50px"></button>
 }
